# parlementaires-lite

./: README.md  pyproject.toml
data/: lightmeup.sql  schema.sql
data/opendata_extract/acteurs/: PA1001.json  PA1002.json  PA1008.json  PA1009.json  PA1012.json  PA1019.json  PA1020.json  PA1023.json  PA1029.json  PA1030.json  PA1031.json  PA1032.json  PA1034.json  PA1037.json  PA1046.json  PA1048.json  PA1052.json  PA1058.json  PA1062.json  PA1063.json  PA1066.json  PA1068.json  PA1070.json  PA1071.json  PA1074.json  PA1075.json  PA1079.json  PA1085.json  PA1088.json  PA1090.json  PA1092.json  PA1094.json  PA1098.json  PA1116.json  PA1122.json  PA1124.json  PA1132.json  PA1134.json  PA1141.json  PA1142.json  (+2215 more)
data/opendata_extract/organes/: PO201275.json  PO210189.json  PO211492.json  PO216154.json  PO217436.json  PO220215.json  PO223698.json  PO227199.json  PO230223.json  PO230225.json  PO230229.json  PO230231.json  PO230434.json  PO266900.json  PO268781.json  PO270903.json  PO270907.json  PO270911.json  PO270915.json  PO273513.json  PO273532.json  PO273548.json  PO273563.json  PO273570.json  PO273580.json  PO274041.json  PO274043.json  PO274044.json  PO274045.json  PO274046.json  PO274047.json  PO274048.json  PO274049.json  PO274050.json  PO274051.json  PO274052.json  PO274053.json  PO274054.json  PO274055.json  PO274056.json  (+1861 more)
parlementaires_lite/: liteitup.py
