[tool.poetry]
name = "parlementaires-lite"
version = "0.1.0"
description = "Transformer l'Open Data parlementaire français en base de données SQLite."
authors = ["Bonus"]

[tool.poetry.dependencies]
python = "^3.7"
orator = "^0.9.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
liteitup = "parlementaires_lite.liteitup:main"